# capstone-research-communicating-background

./: README.md
dummy_server/: .flaskenv  README.md  pyproject.toml
dummy_server/src/dummy_server/: __init__.py
dummy_server/src/dummy_server/api/: __init__.py  query.py  sample.py
dummy_server/src/dummy_server/models/: emotions.py
flutter_application/: pubspec.yaml
flutter_application/android/app/src/main/: AndroidManifest.xml
flutter_application/ios/Runner/: Info.plist
flutter_application/ios/Runner.xcodeproj/: project.pbxproj
flutter_application/lib/: main.dart
flutter_application/lib/models/: evaluate_request_dto.dart  evaluate_request_dto.g.dart
